Fixed update movie